--- a/.gitignore
+++ b/.gitignore
@@ -7,24 +7,52 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+frontend/node_modules/
+backend/venv/
+
+# Build outputs
+frontend/dist/
+frontend/dist-ssr/
 *.local
+backend/__pycache__/
+backend/*.pyc
+backend/*.pyo
+backend/*.pyd
+backend/*.db
+backend/*.sqlite3
+
+# Environment files
+.env
+.env.*
+frontend/.env
+backend/.env
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+.github/
+.vscode/
 
-# Backend
-backend/venv/*
+# Python tooling
+backend/.pytest_cache/
+backend/.mypy_cache/
+backend/.coverage
+backend/coverage.xml
+backend/.hypothesis/
 
-# enviomnments
-.env
+# FastAPI specific
+backend/instance/
+backend/*.egg-info/
+backend/.pdm.toml
+backend/.pdm.lock
+
+# VS Code specific for Python (optional)
+backend/.vscode/
